--- a/assets/style.css
+++ b/assets/style.css
@@ -63,3 +63,9 @@ img {
     font-size: 14px;
     opacity: 0.6;
 }
+footer {
+    position: fixed;
+    bottom: 0;
+    background-color: white;
+    display: flex;
+}
